update: complete customer detail feature